--- a/_include/hu/reuse_hu_recommended_settings.adoc
+++ b/_include/hu/reuse_hu_recommended_settings.adoc
@@ -22,7 +22,7 @@ blacklist {
 ....
 
 .Example
-In this example, `sda` is the local SCSI disk that we need to blacklist.
+In this example, `sda` is the local SCSI disk that we need to add to the blacklist.
 
 .Steps
 
