--- a/_include/hu/reuse_hu_recommended_settings_ol6.adoc
+++ b/_include/hu/reuse_hu_recommended_settings_ol6.adoc
@@ -20,7 +20,7 @@ blacklist {
 ....
 
 .Example
-In this example, sda is the local SCSI disk that we need to blacklist.
+In this example, sda is the local SCSI disk that we need to add to the blacklist.
 
 .	Run the following command to determine the WWID:
 +
