--- a/hu_rhel_87.adoc
+++ b/hu_rhel_87.adoc
@@ -1,7 +1,7 @@
 ---
 sidebar: sidebar
 permalink: hu_rhel_87.html
-keywords: host utilities, red hat, rhel, linux, 8.7, netapp, ontap
+keywords: host utilities, red hat, rhel, linux, 8.7, netapp, ontap, rhel 
 summary: Describes how to use Red Hat Enterprise Linux 8.7 with ONTAP
 ---
 
