--- a/hu_rhel_87.adoc
+++ b/hu_rhel_87.adoc
@@ -130,7 +130,8 @@ When this value is exceeded, the scsi target is removed from the host. This para
 However in RHEL 8.7, `sysfs` filesystem returns a negative value (-1) for the `dev_loss_tmo` timeout parameter for SCSI devices.
 Following is the command line example to verify the `dev_loss_tmo` parameter on a working host: 
 `# cat /sys/devices/pci*/*/*/host*/rport*/fc_remote_ports/rport*/dev_loss_tmo
-4294967295`
+4294967295`. 
+There is no workaround for this issue in RHEL 8.7.
 |link:https://bugzilla.redhat.com/show_bug.cgi?id=2124297[2124297]
 |===
 
