--- a/nvme_rhel_91.adoc
+++ b/nvme_rhel_91.adoc
@@ -332,6 +332,8 @@ nvme connect-all -t tcp -w 192.168.166.5 -a 192.168.166.21 -l 1800
 
 == Validate NVMe-oF
 
+.Steps
+
 . Verify that in-kernel NVMe multipath is indeed enabled by checking:
 +
 ----
@@ -364,7 +366,8 @@ Usage                Format         FW Rev
 
 . Verify that the controller state of each path is live and has proper ANA status. For example:
 +
-Example (a)
+Example (a):
++
 [subs=+quotes]
 ----
 # nvme list-subsys /dev/nvme0n1
@@ -379,6 +382,7 @@ nvme-subsys10 - NQN=nqn.1992-08.com.netapp:sn.82e7f9edc72311ec8187d039ea14107d:s
 ----
 +
 Example (b):
++
 ----
 # nvme list-subsys /dev/nvme0n1
 nvme list-subsys /dev/nvme1n1
@@ -389,6 +393,7 @@ nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.bf0691a7c74411ec8187d039ea14107d:su
  +- nvme3 tcp traddr=192.168.167.21,trsvcid=4420,host_traddr=192.168.167.5 live non-optimized
  +- nvme4 tcp traddr=192.168.167.20,trsvcid=4420,host_traddr=192.168.167.5 live optimized
 ----
+
 . Verify that the NetApp plug-in displays proper values for each ONTAP namespace device. For example:
 +
 ----
@@ -506,14 +511,10 @@ options qla2xxx ql2xnvmeenable=1 ql2xextended_error_logging=0x1e400000
 [cols="10,30,30,10",options="header"]
 |===
 |NetApp Bug ID	|Title	|Description	|Bugzilla ID
-
 |1479047	|RHEL 9.1 NVMe-oF hosts create duplicate Persistent Discovery Controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can create Persistent Discovery Controllers (PDCs) by passing the -p option to the "nvme discover" command. For a given initiator-target combination, the creation of one PDC is expected with each invocation of the "nvme discover" command. However, beginning with ONTAP 9.10.1, Red Hat Enterprise Linux (RHEL) 9.1 NVMe-oF hosts end up creating duplicate PDCs with each invocation of the "nvme discover" command with the -p option. This leads to wastage of resources on both the host and the target. 	|2087000
 |1503468
-|nvme list-subsys returns repeated nvme controller list for a given subsystem.	|In RHEL 9.1 'nvme list-subsys' returns nvme controllers with its respective ANA state for all namespaces, that belongs to a given subsystem. 
-However the ANA state is a per namespace attribute hence it only makes sense to show it if the user lists the subsystem for a namespace.
-Hence 'nvme list-subsys' returning the unique list of nvme controllers associated to a given subsystem would be more ideal.  	|2130106
-
-
+|`nvme list-subsys` parameter returns repeated nvme controller list for a given subsystem.	|In RHEL 9.1, `nvme list-subsys` parameter returns nvme controllers with its respective ANA state for all namespaces, that belongs to a given subsystem. However, the ANA state is a per-namespace attribute hence it only makes sense to show it if the user lists the subsystem for a namespace.
+Hence `nvme list-subsys` parameter returning the unique list of nvme controllers associated to a given subsystem would be more ideal.  	|2130106
 |===
 
 === Common nvme-cli Errors and Workarounds
