--- a/nvme_rhel_87.adoc
+++ b/nvme_rhel_87.adoc
@@ -29,7 +29,7 @@ RHEL 8.7 includes support for NVMe/TCP (as a Technology Preview feature) in addi
 
 * For RHEL 8.7, in-kernel NVMe multipath remains disabled by default. Therefore, you need to enable it manually. 
 
-* NVMe/TCP on RHEL 8.7 remains a Technology Preview feature due to open issues. Refer to the link:https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html/8.7_release_notes/index[RHEL 8.7 release notes] for details. 
+* NVMe/TCP on RHEL 8.7 remains a Technology Preview feature due to open issues. Refer to the link:https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html/8.7_release_notes/index[RHEL 8.7 release notes^] for details. 
 
 
 == Configuration requirements
@@ -482,7 +482,7 @@ options qla2xxx ql2xnvmeenable=1 ql2xextended_error_logging=0x1e400000
 |===
 |NetApp Bug ID	|Title	|Description	|Bugzilla ID
 
-|1479047	|RHEL 8.x and 9.0 NVMe-oF hosts create duplicate Persistent Discovery Controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can create Persistent Discovery Controllers (PDCs) by passing the -p option to the "nvme discover" command. For a given initiator-target combination, the creation of one PDC is expected with each invocation of the "nvme discover" command. However, beginning with ONTAP 9.10.1, Red Hat Enterprise Linux (RHEL) 8.x and 9.0 NVMe-oF hosts end up creating duplicate PDCs with each invocation of the "nvme discover" command with the -p option. This leads to wastage of resources on both the host and the target. 	|2087000
+|1479047	|RHEL 8.x NVMe-oF hosts create duplicate Persistent Discovery Controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can create Persistent Discovery Controllers (PDCs) by passing the `-p` option to the `nvme discover` command. For a given initiator-target combination, the creation of one PDC is expected with each invocation of the "nvme discover" command. However, beginning with ONTAP 9.10.1, Red Hat Enterprise Linux (RHEL) 8.x NVMe-oF hosts end up creating duplicate PDCs with each invocation of the `nvme discover` command with the `-p` option. This leads to wastage of resources on both the host and the target. 	|2087000
 |===
 
 === Common nvme-cli Errors and Workarounds
