--- a/nvme_rhel_87.adoc
+++ b/nvme_rhel_87.adoc
@@ -39,6 +39,8 @@ Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability M
 
 == Enable in-kernel NVMe Multipath
 
+.Steps
+
 .	Install RHEL 8.7 on the server. After the installation is complete, verify that you are running the specified RHEL 8.7 kernel. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the most current list of supported versions.
 
 .	After the installation is complete, verify that you are running the specified RHEL 8.7 kernel. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the most current list of supported versions.
@@ -77,8 +79,8 @@ nvme-cli-1.16-5.el8.x86_64
 
 ::> vserver nvme subsystem host show -vserver vs_nvme167 
 Vserver     Subsystem       Host NQN
------------ --------------- ----------------------------------------------------------
-vs_nvme167 rhel_167_LPe35002     nqn.2014-08.org.nvmexpress:uuid: a7f7a1d4-311a-11e8-b634-7ed30aef10b7 
+----------- --------------- ----------------
+vs_nvme167 rhel_167_LPe35002  nqn.2014-08.org.nvmexpress:uuid: a7f7a1d4-311a-11e8-b634-7ed30aef10b7 
 
 ----
 +
@@ -105,6 +107,8 @@ defaults {
 == Configure NVMe/FC
 
 === Broadcom/Emulex
+
+.Steps
 
 .	Verify that you are using the supported adapter. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the most current list of supported adapters.
 +
@@ -179,6 +183,8 @@ FCP CMPL: xb 0000006b Err 00017f99
 
 ONTAP reports an MDTS (Max Data Transfer Size) of 8 in the Identify Controller data which means the maximum I/O request size should be up to 1 MB. However, to issue I/O requests of size 1 MB for the Broadcom NVMe/FC host, the lpfc parameter `lpfc_sg_seg_cnt` should also be bumped up to 256 from the default value of 64. Use the following instructions to do so:
 
+.Steps
+
 . Append the value `256` in the respective `modprobe lpfc.conf` file:
 +
 ----
@@ -198,7 +204,7 @@ Now the Broadcom FC-NVMe host should be able to send up to 1MB I/O requests on t
 
 === Marvell/QLogic
 
-The native inbox `qla2xxx` driver included in the RHEL 8.6 kernel has the latest upstream fixes which are essential for ONTAP support.
+The native inbox `qla2xxx` driver included in the RHEL 8.7 kernel has the latest upstream fixes which are essential for ONTAP support.
 
 . Verify that you are running the supported adapter driver and firmware versions using the following command:
 
@@ -344,6 +350,8 @@ sectype: none
 
 == Validate NVMe-oF
 
+.Steps
+
 . Verify that in-kernel NVMe multipath is indeed enabled by checking:
 +
 ----
@@ -431,9 +439,11 @@ NSID  UUID                                   Size
 
 == Troubleshooting
 
-Before commencing any troubleshooting for any NVMe/FC failures, ensure that you are running a configuration that is compliant to the IMT specifications and then proceed with the next steps to debug any host side issues.
+Before commencing any troubleshooting for any NVMe/FC failures, make sure that you are running a configuration that is compliant to the IMT specifications and then proceed with the next steps to debug any host side issues.
 
 === LPFC Verbose Logging
+
+.Steps
 
 . You can set the `lpfc_log_verbose` driver setting to any of the following values to log NVMe/FC events:
 +
@@ -463,6 +473,8 @@ options lpfc lpfc_log_verbose=0xf00083
 
 There is no similar specific qla2xxx logging for NVMe/FC as for lpfc driver. Therefore, you may set the general qla2xxx logging level using the following steps:
 
+.Steps
+
 . Append the `ql2xextended_error_logging=0x1e400000` value to the corresponding `modprobe qla2xxx conf` file.
 
 . Recreate the `initramfs` by running `dracut -f` command and then reboot the host.
@@ -482,7 +494,7 @@ options qla2xxx ql2xnvmeenable=1 ql2xextended_error_logging=0x1e400000
 |===
 |NetApp Bug ID	|Title	|Description	|Bugzilla ID
 
-|1479047	|RHEL 8.x NVMe-oF hosts create duplicate Persistent Discovery Controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can create Persistent Discovery Controllers (PDCs) by passing the `-p` option to the `nvme discover` command. For a given initiator-target combination, the creation of one PDC is expected with each invocation of the "nvme discover" command. However, beginning with ONTAP 9.10.1, Red Hat Enterprise Linux (RHEL) 8.x NVMe-oF hosts end up creating duplicate PDCs with each invocation of the `nvme discover` command with the `-p` option. This leads to wastage of resources on both the host and the target. 	|2087000
+|1479047	|RHEL 8.x NVMe-oF hosts create duplicate Persistent Discovery Controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can create Persistent Discovery Controllers (PDCs) by providing the `-p` option to the `nvme discover` command. For a specified initiator-target combination, the creation of one PDC is expected with each invocation of the `nvme discover` command. However, beginning with ONTAP 9.10.1, Red Hat Enterprise Linux (RHEL) 8.x NVMe-oF hosts end up creating duplicate PDCs with each invocation of the `nvme discover` command with the `-p` option. This leads to wastage of resources on both the host and target. 	|2087000
 |===
 
 === Common nvme-cli Errors and Workarounds
@@ -494,10 +506,10 @@ The errors displayed by `nvme-cli` during nvme discover, nvme connect or nvme co
 |Errors displayed by `nvme-cli`  | Probable cause | Workaround
 | `Failed to write to /dev/nvme-fabrics: Invalid argument`
 |Incorrect syntax
-|Ensure you are using the correct syntax for the above nvme commands.
+|Make sure you are using the correct syntax for the above nvme commands.
 |`Failed to write to /dev/nvme-fabrics: No such file or directory`  |Multiple issues could trigger this.
-Passing wrong arguments to the nvme commands is one of the common causes.
-a| * Ensure you have passed the correct arguments (such as, correct WWNN string, WWPN string, and more) to the commands.
+Providing wrong arguments to the nvme commands is one of the common causes.
+a| * MAke sure you have passed the correct arguments (such as, correct WWNN string, WWPN string, and more) to the commands.
 * If the arguments are correct, but you still see this error, check if the `/sys/class/scsi_host/host*/nvme_info` output is proper, the NVMe initiator showing as `Enabled`, and the NVMe/FC target LIFs properly showing up here under the remote ports sections.
 Example:
 +
@@ -522,9 +534,9 @@ Cmpl 00000000000000a8 Outstanding 0000000000000001
 
 * If the target LIFs don't show up as above in the nvme_info output, check the `/var/log/messages` and `dmesg` output for any suspicious NVMe/FC failures, and report or fix accordingly.
 
-|`No discovery log entries to fetch`  a|Generally seen if the `/etc/nvme/hostnqn` string has not been added to the corresponding subsystem on the NetApp array or an incorrect `hostnqn` string has been added to the respective subsystem. a|Ensure the exact `/etc/nvme/hostnqn` string is added to the corresponding subsystem on the NetApp array (verify through the `vserver nvme subsystem host show` command).
+|`No discovery log entries to fetch`  a|Generally seen if the `/etc/nvme/hostnqn` string has not been added to the corresponding subsystem on the NetApp array or an incorrect `hostnqn` string has been added to the respective subsystem. a|MAke sure the exact `/etc/nvme/hostnqn` string is added to the corresponding subsystem on the NetApp array (verify through the `vserver nvme subsystem host show` command).
 
-|`Failed to write to /dev/nvme-fabrics: Operation already in progress`  a|Seen if the controller associations or specified operation is already created or in the process of being created. This could happen as part of the auto-connect scripts installed above.
+|`Failed to write to /dev/nvme-fabrics: Operation already in progress`  a|Noticed if the controller associations or specified operations are already created or in the process of being created. This could happen as part of the auto-connect scripts installed above.
 a|None. For `nvme discover`, try running this command after some time. For `nvme connect` and `connect-all`, run the `nvme list` command to verify that the namespace devices are already created and displayed on the host.
 
 |===
