Apply suggestions from code review
Co-authored-by: Barb Einarsen <55463742+netapp-barbe@users.noreply.github.com>

--- a/nvme_rhel_87.adoc
+++ b/nvme_rhel_87.adoc
@@ -41,7 +41,7 @@ Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability M
 
 .Steps
 
-.	Install RHEL 8.7 on the server. After the installation is complete, verify that you are running the specified RHEL 8.7 kernel. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the most current list of supported versions.
+.	Install RHEL 8.7 on the server. 
 
 .	After the installation is complete, verify that you are running the specified RHEL 8.7 kernel. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the most current list of supported versions.
 +
