Apply suggestions from code review
Co-authored-by: Barb Einarsen <55463742+netapp-barbe@users.noreply.github.com>

--- a/nvme_rhel_87.adoc
+++ b/nvme_rhel_87.adoc
@@ -442,7 +442,7 @@ NSID  UUID                                   Size
 
 Before commencing any troubleshooting for any NVMe/FC failures, make sure that you are running a configuration that is compliant to the IMT specifications and then proceed with the next steps to debug any host side issues.
 
-=== LPFC Verbose Logging
+=== LPFC verbose logging
 
 .Steps
 
