--- a/nvme_ol_85.adoc
+++ b/nvme_ol_85.adoc
@@ -1,10 +1,9 @@
 ---
 sidebar: sidebar
 permalink: nvme_ol_85.html
-redirect: nvme_ol_86.html
 keywords: nvme, linux, oracle, 
 summary: 
-----
+---
 
 = NVMe/FC Host Configuration for Oracle Linux 8.5 with ONTAP
 :toc: macro
@@ -16,6 +15,7 @@ summary:
 :imagesdir: ./media/
 
 [.lead]
+The NVMe/FC host configuration details for Oracle 8.5 will be published when Oracle support for NVMe/FC is fully qualified for these host OS versions.
 
 
 
