--- a/nvme_ol_85.adoc
+++ b/nvme_ol_85.adoc
@@ -15,7 +15,7 @@ summary:
 :imagesdir: ./media/
 
 [.lead]
-The NVMe/FC host configuration details for Oracle 8.5 will be published when Oracle support for NVMe/FC is fully qualified for these host OS versions.
+The NVMe/FC host configuration details for Oracle 8.5 will be published when Oracle support for NVMe/FC is fully qualified for this host OS version.
 
 
 
