--- a/nvme_rhel_86.adoc
+++ b/nvme_rhel_86.adoc
@@ -409,6 +409,15 @@ options qla2xxx ql2xnvmeenable=1 ql2xextended_error_logging=0x1e400000
 507510784
 ----
 
+== Known issues and limitations
+
+[cols="10,30,30,10",options="header"]
+|===
+|NetApp Bug ID	|Title	|Description	|Bugzilla ID
+
+|1479047	|RHEL 8.x NVMe-oF hosts create duplicate Persistent Discovery Controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can create Persistent Discovery Controllers (PDCs) by providing the `-p` option to the `nvme discover` command. For a specified initiator-target combination, the creation of one PDC is expected with each invocation of the `nvme discover` command. However, beginning with ONTAP 9.10.1, Red Hat Enterprise Linux (RHEL) 8.x NVMe-oF hosts end up creating duplicate PDCs with each invocation of the `nvme discover` command with the `-p` option. This leads to wastage of resources on both the host and target. 	|2087000
+|===
+
 === Common nvme-cli Errors and Workarounds
 
 The errors displayed by `nvme-cli` during nvme discover, nvme connect or nvme connect-all operations and the workarounds are shown in the following table:
