--- a/nvme_rhel_90.adoc
+++ b/nvme_rhel_90.adoc
@@ -28,6 +28,7 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 
 == Limitations
+
 * Unlike NVMe/FC, NVMe/TCP has no auto-connect functionality. This reflects as two major limitations on the Linux host:
 ** No auto-reconnect after paths get reinstated - NVMe/TCP cannot automatically reconnect to a path that is reinstated beyond the default `ctrl-loss-tmo` of 10 minutes following a path down.
 ** No auto-connect during host bootup - NVMe/TCP cannot automatically connect during host bootup as well.
@@ -254,6 +255,9 @@ sectype: none
 ----
 
 == Validate NVMf
+
+.Steps
+
 . Verify that in-kernel NVMe multipath is indeed enabled by checking:
 +
 ----
