--- a/nvme_rhel_91.adoc
+++ b/nvme_rhel_91.adoc
@@ -219,115 +219,58 @@ You should set the retry period for failover events to at least 30 minutes to pr
 . Verify whether the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
 +
 ----
-# nvme discover -t tcp -w 192.168.211.5 -a 192.168.211.14
-nvme discover -a 192.168.166.21 -t tcp -w 192.168.166.5  -p
+# nvme discover -t tcp -w 192.168.1.8 -a 192.168.1.51
 
-Discovery Log Number of Records 8, Generation counter 18
+Discovery Log Number of Records 10, Generation counter 119
 =====Discovery Log Entry 0======
-trtype:  tcp
-adrfam:  ipv4
-subtype: current discovery subsystem
-treq:    not specified
-portid:  0
-trsvcid: 8009
-subnqn:  nqn.1992-08.com.netapp:sn.bf0691a7c74411ec8187d039ea14107d:discovery
-traddr:  192.168.167.20
-eflags:  explicit discovery connections, duplicate discovery information
+trtype: tcp
+adrfam: ipv4
+subtype: nvme subsystem
+treq: not specified
+portid: 0
+trsvcid: 4420
+subnqn: nqn.1992-08.com.netapp:sn.56e362e9bb4f11ebbaded039ea165abc:subsystem.nvme_118_tcp_1
+traddr: 192.168.2.56
 sectype: none
 =====Discovery Log Entry 1======
-trtype:  tcp
-adrfam:  ipv4
-subtype: current discovery subsystem
-treq:    not specified
-portid:  1
-trsvcid: 8009
-subnqn:  nqn.1992-08.com.netapp:sn.bf0691a7c74411ec8187d039ea14107d:discovery
-traddr:  192.168.166.20
-eflags:  explicit discovery connections, duplicate discovery information
+trtype: tcp
+adrfam: ipv4
+subtype: nvme subsystem
+treq: not specified
+portid: 1
+trsvcid: 4420
+subnqn: nqn.1992-08.com.netapp:sn.56e362e9bb4f11ebbaded039ea165abc:subsystem.nvme_118_tcp_1
+traddr: 192.168.1.51
 sectype: none
 =====Discovery Log Entry 2======
-trtype:  tcp
-adrfam:  ipv4
-subtype: current discovery subsystem
-treq:    not specified
-portid:  2
-trsvcid: 8009
-subnqn:  nqn.1992-08.com.netapp:sn.bf0691a7c74411ec8187d039ea14107d:discovery
-traddr:  192.168.167.21
-eflags:  explicit discovery connections, duplicate discovery information
-sectype: none
-=====Discovery Log Entry 3======
-trtype:  tcp
-adrfam:  ipv4
-subtype: current discovery subsystem
-treq:    not specified
-portid:  3
-trsvcid: 8009
-subnqn:  nqn.1992-08.com.netapp:sn.bf0691a7c74411ec8187d039ea14107d:discovery
-traddr:  192.168.166.21
-eflags:  explicit discovery connections, duplicate discovery information
-sectype: none
-=====Discovery Log Entry 4======
-trtype:  tcp
-adrfam:  ipv4
+trtype: tcp
+adrfam: ipv4
 subtype: nvme subsystem
-treq:    not specified
-portid:  0
+treq: not specified
+portid: 0
 trsvcid: 4420
-subnqn:  nqn.1992-08.com.netapp:sn.bf0691a7c74411ec8187d039ea14107d:subsystem.rhel_tcp_133
-traddr:  192.168.167.20
-eflags:  not specified
+subnqn: nqn.1992-08.com.netapp:sn.56e362e9bb4f11ebbaded039ea165abc:subsystem.nvme_118_tcp_2
+traddr: 192.168.2.56
 sectype: none
-=====Discovery Log Entry 5======
-trtype:  tcp
-adrfam:  ipv4
-subtype: nvme subsystem
-treq:    not specified
-portid:  1
-trsvcid: 4420
-subnqn:  nqn.1992-08.com.netapp:sn.bf0691a7c74411ec8187d039ea14107d:subsystem.rhel_tcp_133
-traddr:  192.168.166.20
-eflags:  not specified
-sectype: none
-=====Discovery Log Entry 6======
-trtype:  tcp
-adrfam:  ipv4
-subtype: nvme subsystem
-treq:    not specified
-portid:  2
-trsvcid: 4420
-subnqn:  nqn.1992-08.com.netapp:sn.bf0691a7c74411ec8187d039ea14107d:subsystem.rhel_tcp_133
-traddr:  192.168.167.21
-eflags:  not specified
-sectype: none
-=====Discovery Log Entry 7======
-trtype:  tcp
-adrfam:  ipv4
-subtype: nvme subsystem
-treq:    not specified
-portid:  3
-trsvcid: 4420
-subnqn:  nqn.1992-08.com.netapp:sn.bf0691a7c74411ec8187d039ea14107d:subsystem.rhel_tcp_133
-traddr:  192.168.166.21
-eflags:  not specified
-sectype: none
-
+...
 ----
 
 .	Verify that other NVMe/TCP initiator-target LIF combos can successfully fetch discovery log page data. For example:
 +
 ----
-nvme discover -a 192.168.166.21 -t tcp -w 192.168.166.5  -p
-nvme discover -a 192.168.167.21 -t tcp -w 192.168.167.5  -p 
+# nvme discover -t tcp -w 192.168.1.8 -a 192.168.1.51
+# nvme discover -t tcp -w 192.168.1.8 -a 192.168.1.52
+# nvme discover -t tcp -w 192.168.2.9 -a 192.168.2.56
+# nvme discover -t tcp -w 192.168.2.9 -a 192.168.2.57
 ----
 
-.	Run `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes. Ensure you set a longer `ctrl_loss_tmo` timer retry period (for example, 30 minutes, which can be set through `-l 1800`) during the connect-all so that it would retry for a longer period of time in the event of a path loss. For example:
+.	Run `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes. MAke sure you set a longer `ctrl_loss_tmo` timer retry period (for example, 30 minutes, which can be set through `-l 1800`) during the connect-all so that it would retry for a longer period of time in the event of a path loss. For example:
 +
 ----
-nvme connect-all -t tcp -w 192.168.166.5 -a 192.168.166.20 -l 1800
-nvme connect-all -t tcp -w 192.168.167.5 -a 192.168.167.21 -l 1800
-nvme connect-all -t tcp -w 192.168.166.5 -a 192.168.166.21 -l 1800
-
+# nvme connect-all -t tcp -w 192.168.1.8 -a 192.168.1.51 -l 1800
+# nvme connect-all -t tcp -w 192.168.1.8 -a 192.168.1.52 -l 1800
+# nvme connect-all -t tcp -w 192.168.2.9 -a 192.168.2.56 -l 1800
+# nvme connect-all -t tcp -w 192.168.2.9 -a 192.168.2.57 -l 1800
 ----
 
 == Validate NVMe-oF
@@ -346,9 +289,13 @@ Y
 ----
 # cat /sys/class/nvme-subsystem/nvme-subsys*/model
 NetApp ONTAP Controller
+NetApp ONTAP Controller
+----
++
+----
 # cat /sys/class/nvme-subsystem/nvme-subsys*/iopolicy
 round-robin
-
+round-robin
 ----
 
 . Verify that the ONTAP namespaces properly reflect on the host. For example:
