--- a/nvme_rhel_90.adoc
+++ b/nvme_rhel_90.adoc
@@ -27,13 +27,6 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 * Starting RHEL 9.0, in-kernel NVMe multipath is enabled for NVMe namespaces by default, without the need for explicit settings (unlike RHEL 8).
 
 
-== Limitations
-
-* Unlike NVMe/FC, NVMe/TCP has no auto-connect functionality. This reflects as two major limitations on the Linux host:
-** No auto-reconnect after paths get reinstated - NVMe/TCP cannot automatically reconnect to a path that is reinstated beyond the default `ctrl-loss-tmo` of 10 minutes following a path down.
-** No auto-connect during host bootup - NVMe/TCP cannot automatically connect during host bootup as well.
-You should set the retry period for failover events to at least 30 minutes to prevent timeouts.  You can increase the retry period by increasing the value of the ctrl_loss_tmo timer.
-
 ==  Configuration requirements
 Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for exact details regarding supported configurations.
 
@@ -189,11 +182,14 @@ Verify `ql2xnvmeenable` is set which enables the Marvell adapter to function as 
 ----
 
 == Configure NVMe/TCP
-Unlike NVMe/FC, NVMe/TCP has no auto-connect functionality. This reflects as two major limitations on the Linux NVMe/TCP host:
 
-* No auto-reconnect after paths get reinstated - NVMe/TCP cannot automatically reconnect to a path that is reinstated beyond the default `ctrl-loss-tmo` of 10 minutes following a path down.
-* No auto-connect during host bootup - NVMe/TCP cannot automatically connect during host bootup as well.
-You should set the retry period for failover events to at least 30 minutes to prevent timeouts.  You can increase the retry period by increasing the value of the ctrl_loss_tmo timer. Following are the details:
+Unlike NVMe/FC, NVMe/TCP has no auto-connect functionality. This manifests two major limitations on the Linux NVMe/TCP host:
+
+* *No auto-reconnect after paths get reinstated* NVMe/TCP cannot automatically reconnect to a path that is reinstated beyond the default `ctrl-loss-tmo` timer of 10 minutes following a path down.
+
+* *No auto-connect during host bootup* NVMe/TCP cannot automatically connect during host bootup as well.
+
+You should set the retry period for failover events to at least 30 minutes to prevent timeouts. You can increase the retry period by increasing the value of the ctrl_loss_tmo timer. Following are the details:
 
 .Steps
 
