--- a/nvme_rhel_91.adoc
+++ b/nvme_rhel_91.adoc
@@ -17,7 +17,7 @@ summary: How to Configure NVMe-oF Host for RHEL 8.7 with ONTAP
 
 == Supportability
 
-NVMe-oF (including NVMe/FC and NVMe/TCP) is supported with RHEL 9.1 with Asymmetric Namespace Access (ANA), this is required for surviving storage failovers (SFOs) on the ONTAP array. ANA is the asymmetric logical unit access (ALUA) equivalent in the NVM-oF environment, and is currently implemented with in-kernel NVMe Multipath. This document contains the details for enabling NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 9.1 and ONTAP as the target.
+NVMe over Fabrics or NVMe-oF (including NVMe/FC and NVMe/TCP) is supported with RHEL 9.1 with Asymmetric Namespace Access (ANA) that is required for surviving storage failovers (SFOs) on the ONTAP array. ANA is the asymmetric logical unit access (ALUA) equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. This document contains the details for enabling NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 9.1 and ONTAP as the target.
 
 include::_include/hu/reuse_hu_cloud_note.adoc[]
 
@@ -26,12 +26,6 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 *	RHEL 9.1 includes support for NVMe/TCP in addition to NVMe/FC. The NetApp plugin in the native `nvme-cli` package can display ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
 *	RHEL 9.1 includes support for in-kernel NVMe multipath for NVMe namespaces enabled by default, without the need for explicit settings.
 *	RHEL 9.1 supports use of NVMe and SCSI co-existent traffic on the same host on a given HBA adapter, without the explicit `dm-multipath` settings to prevent claiming NVMe namespaces.
-
-== Limitations
-
-*	Unlike NVMe/FC, NVMe/TCP has no auto-connect functionality. This is reflected in  two major limitations on the Linux host:
-**	No auto-reconnect after paths are reinstated - NVMe/TCP cannot automatically reconnect to a path that is reinstated beyond the default ctrl-loss-tmo time of 10 minutes following a path down.
-**	No auto-connect during host bootup - NVMe/TCP cannot automatically connect during host bootup.You should set the retry period for failover events to at least 30 minutes to prevent timeouts. You can increase the retry period by increasing the value of the ctrl_loss_tmo timer.
 
 == Configuration requirements
 
@@ -86,6 +80,8 @@ NOTE: If the host NQN strings do not match, you should use the `vserver modify` 
 == Configure NVMe/FC
 
 === Broadcom/Emulex
+
+.Steps
 
 .	Verify that you are using the supported adapter. For the most current list of supported adapters, see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^].
 +
@@ -172,7 +168,9 @@ FCP CMPL: xb 00000000 Err 00000004
 
 ====	 Enable 1MB I/O size (Optional)
 
-ONTAP reports an MDTS (Max Data Transfer Size) of 8 in the Identify Controller data which means the maximum I/O request size should be up to 1 MB. However, to issue I/O requests of size 1 MB for the Broadcom NVMe/FC host, the lpfc parameter `lpfc_sg_seg_cnt` should also be bumped up to 256 from the default value of 64. Use the following instructions to do so:
+ONTAP reports an MDTS (Max Data Transfer Size) of 8 in the Identify Controller data which means the maximum I/O request size should be up to 1 MB. However, to issue I/O requests of size 1 MB for the Broadcom NVMe/FC host, the lpfc parameter lpfc_sg_seg_cnt should also be bumped up to 256 from the default value of 64. Use the following instructions to do so:
+
+.Steps
 
 . Append the value `256` in the respective `modprobe lpfc.conf` file:
 +
@@ -193,7 +191,9 @@ Now the Broadcom FC-NVMe host should be able to send up to 1MB I/O requests on t
 
 === Marvell/QLogic
 
-The native inbox `qla2xxx` driver included in the RHEL 8.6 kernel has the latest upstream fixes which are essential for ONTAP support.
+The native inbox `qla2xxx` driver included in the RHEL 9.1 kernel has the latest upstream fixes which are essential for ONTAP support.
+
+.Steps
 
 . Verify that you are running the supported adapter driver and firmware versions using the following command:
 
@@ -205,7 +205,7 @@ QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug
 QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug 
 ----
 
-. Verify `ql2xnvmeenable` is set which enables the Marvell adapter to function as a NVMe/FC initiator using the following command:
+. Verify `ql2xnvmeenable` is set which enables the Marvell adapter to function as an NVMe/FC initiator using the following command:
 
 +
 ----
@@ -215,12 +215,13 @@ QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug
 
 == Configure NVMe/TCP
 
-Unlike NVMe/FC, NVMe/TCP has no auto-connect functionality. This is reflected in two major limitations on the Linux NVMe/TCP host:
+Unlike NVMe/FC, NVMe/TCP has no auto-connect functionality. This manifests two major limitations on the Linux NVMe/TCP host:
 
-*	No auto-reconnect after paths get reinstated – NVMe/TCP cannot automatically reconnect to a path that is reinstated beyond the default ctrl-loss-tmo time of 10 minutes following a path down event.
-*	No auto-connect during host bootup – NVMe/TCP cannot automatically connect during host bootup.
-You should set the retry period for failover events to at least 30 minutes to prevent timeouts. You can increase the retry period by increasing the value of the ctrl_loss_tmo timer.
+* *No auto-reconnect after paths get reinstated* NVMe/TCP cannot automatically reconnect to a path that is reinstated beyond the default `ctrl-loss-tmo` timer of 10 minutes following a path down.
 
+* *No auto-connect during host bootup* NVMe/TCP cannot automatically connect during host bootup as well.
+
+You should set the retry period for failover events to at least 30 minutes to prevent timeouts. You can increase the retry period by increasing the value of the ctrl_loss_tmo timer. Following are the details:
 
 .Steps
 . Verify whether the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
@@ -262,7 +263,7 @@ sectype: none
 ...
 ----
 
-.	Verify that other NVMe/TCP initiator-target LIF combos can successfully fetch discovery log page data. For example:
+.	Verify that the other NVMe/TCP initiator-target LIF combos can successfully fetch discovery log page data. For example:
 +
 ----
 # nvme discover -t tcp -w 192.168.1.8 -a 192.168.1.51
@@ -271,7 +272,7 @@ sectype: none
 # nvme discover -t tcp -w 192.168.2.9 -a 192.168.2.57
 ----
 
-.	Run `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes. MAke sure you set a longer `ctrl_loss_tmo` timer retry period (for example, 30 minutes, which can be set through `-l 1800`) during the connect-all so that it would retry for a longer period of time in the event of a path loss. For example:
+.	Run `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes. Make sure you set a longer `ctrl_loss_tmo` timer retry period (for example, 30 minutes, which can be set through `-l 1800`) while running the `connect-all` command so that it would retry for a longer period of time in the event of a path loss. For example:
 +
 ----
 # nvme connect-all -t tcp -w 192.168.1.8 -a 192.168.1.51 -l 1800
@@ -413,11 +414,13 @@ NSID UUID                                   Size
 
 == Troubleshooting
 
-Before commencing any troubleshooting for any NVMe/FC failures, ensure that you are running a configuration that is compliant to the IMT specifications and then proceed with the next steps to debug any host side issues.
+Before commencing any troubleshooting for any NVMe/FC failures, make sure that you are running a configuration that is compliant to the Interoperability Matrix Tool (IMT) specifications and then proceed with the next steps to debug any host side issues.
 
 === LPFC Verbose Logging
 
-. You can set the `lpfc_log_verbose` driver setting to any of the following values to log NVMe/FC events:
+.Steps
+
+. Set the `lpfc_log_verbose` driver setting to any of the following values to log NVMe/FC events:
 +
 ----
 
@@ -443,7 +446,9 @@ options lpfc lpfc_log_verbose=0xf00083
 
 === qla2xxx Verbose Logging
 
-There is no similar specific qla2xxx logging for NVMe/FC as for lpfc driver. Therefore, you may set the general qla2xxx logging level using the following steps:
+There is no similar specific qla2xxx logging for NVMe/FC as for the `lpfc` driver. Therefore, you can set the general qla2xxx logging level using the following steps:
+
+.Steps
 
 . Append the `ql2xextended_error_logging=0x1e400000` value to the corresponding `modprobe qla2xxx conf` file.
 
@@ -464,13 +469,12 @@ options qla2xxx ql2xnvmeenable=1 ql2xextended_error_logging=0x1e400000
 |===
 |NetApp Bug ID	|Title	|Description	|Bugzilla ID
 |1503468
-|`nvme list-subsys` parameter returns repeated nvme controller list for a given subsystem.	|In RHEL 9.1, `nvme list-subsys` parameter returns nvme controllers with its respective ANA state for all namespaces, that belongs to a given subsystem. However, the ANA state is a per-namespace attribute hence it only makes sense to show it if the user lists the subsystem for a namespace.
-Hence `nvme list-subsys` parameter returning the unique list of nvme controllers associated to a given subsystem would be more ideal.  	|2130106
+|`nvme list-subsys` command returns repeated nvme controller list for a given subsystem	|The `nvme list-subsys` command should return a unique list of nvme controllers associated to a given subsystem. In RHEL 9.1, the `nvme list-subsys` command returns nvme controllers with its respective ANA state for all namespaces that belong to a given subsystem. However, the ANA state is a per-namespace attribute therefore, it would be ideal to display unique nvme controller entries with the path state if you list the subsystem command syntax for a given namespace.  |2130106
 |===
 
 === Common nvme-cli Errors and Workarounds
 
-The errors displayed by `nvme-cli` during nvme discover, nvme connect or nvme connect-all operations and the workarounds are shown in the following table:
+The errors displayed by `nvme-cli` during `nvme discover`, `nvme connect` or `nvme connect-all` operations and the workarounds are shown in the following table:
 
 [options="header", cols="20, 20, 50"]
 |===
